fix module headers on smaller screens

--- a/SCSS/WWNTBM-MOS.scss
+++ b/SCSS/WWNTBM-MOS.scss
@@ -3902,20 +3902,19 @@ p > video {
 .module-header {
     position: relative;
     margin-bottom: 2em;
+    background-repeat: no-repeat;
+    background-size: cover;
 
-    .module-title { padding: 1em; }
+    .module-title {
+        @media screen and (min-width: 56.875em) { padding: 2vw; }
+        @media screen and (max-width: 56.874em) { padding: 3.5vw; }
+    }
 
     img { opacity: 0.5; }
 }
 
 h1.module-title,
 .module-container .module h2 {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: 0;
     padding: 2em 0.5em 0.5em;
     text-align: center;
     color: white;
